@@ -12,6 +12,7 @@ TBC - 0.31.0
 - [NEW] - Main Window - Current profile name is shown (issue #282)
 - [NEW] - Import - Details can be saved to file (issue #284)
 - [NEW] - Added Simplified Chinese translation (PR #285 thank BG7JAF)
+- [NEW] - New Contact - Enter saves QSO if QSO time is running (issue #293 - partial)
 - [NEW] - RIG Widget - RIT/XIT are displayed with user-friendly units (issue #294)
 - Fixed ADI Import is too slow (issue #270)
 - Improved Import/Export Performance
